Enable PBs even if CGAL is not enabled

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -433,8 +433,8 @@ ELSE(ENABLE_GUI)
 ENDIF(ENABLE_GUI)
 #===========================================================
 # This one will cry on attempts to build CGAL-based packages without cgal
-IF(NOT ENABLE_CGAL AND (ENABLE_PFVFLOW OR ENABLE_TWOPHASEFLOW OR ENABLE_THERMAL OR ENABLE_POTENTIAL_BLOCKS))
-  MESSAGE(STATUS "PFVFLOW, TWOPHASEFLOW, THERMAL, and POTENTIAL_BLOCKS depends on CGAL, but CGAL is disabled (not found or turned OFF)")
+IF(NOT ENABLE_CGAL AND (ENABLE_PFVFLOW OR ENABLE_TWOPHASEFLOW OR ENABLE_THERMAL))
+  MESSAGE(STATUS "PFVFLOW, TWOPHASEFLOW and THERMAL depends on CGAL, but CGAL is disabled (not found or turned OFF)")
 ENDIF(NOT ENABLE_CGAL AND (ENABLE_PFVFLOW OR ENABLE_TWOPHASEFLOW OR ENABLE_THERMAL OR ENABLE_POTENTIAL_BLOCKS))
 #===========================================================
 IF(ENABLE_CGAL)
@@ -684,7 +684,7 @@ ENDIF(ENABLE_POTENTIAL_PARTICLES)
 
 
 #===========================================================
-IF(ENABLE_POTENTIAL_BLOCKS AND ENABLE_CGAL)
+IF(ENABLE_POTENTIAL_BLOCKS)
   INCLUDE(FindCLP)
   FIND_PACKAGE(OpenBlas REQUIRED)
   FIND_PACKAGE(LAPACK REQUIRED)
@@ -700,9 +700,9 @@ IF(ENABLE_POTENTIAL_BLOCKS AND ENABLE_CGAL)
     SET(DISABLED_FEATS "${DISABLED_FEATS} PotentialBlocks")
     SET(ENABLE_POTENTIAL_BLOCKS OFF)
   ENDIF(CLP_FOUND AND OPENBLAS_FOUND AND LAPACK_FOUND)
-ELSE(ENABLE_POTENTIAL_BLOCKS AND ENABLE_CGAL)
+ELSE(ENABLE_POTENTIAL_BLOCKS)
   SET(DISABLED_FEATS "${DISABLED_FEATS} PotentialBlocks")
-ENDIF(ENABLE_POTENTIAL_BLOCKS AND ENABLE_CGAL)
+ENDIF(ENABLE_POTENTIAL_BLOCKS)
 #===========================================================
 
 
