--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -139,7 +139,7 @@ make_clang:
     - export CC="/usr/bin/clang-9"
     - export CXX="/usr/bin/clang++-9"
     # We should escape disabling features for the clang-build. Clang should work exactly like gcc.
-    - export EXTRA_CMAKE_ARGS="-DENABLE_THERMAL=0 -DENABLE_TWOPHASEFLOW=0 -DENABLE_POTENTIAL_BLOCKS=0 -DENABLE_USEFUL_ERRORS=0 $EXTRA_CMAKE_ARGS"
+    - export EXTRA_CMAKE_ARGS="-DENABLE_THERMAL=0 -DENABLE_TWOPHASEFLOW=0 -DENABLE_USEFUL_ERRORS=0 $EXTRA_CMAKE_ARGS"
   image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye
 
 # 3.1. test stage
