--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -149,7 +149,7 @@ make_clang:
   script:
     - install/bin/yade-ci --test
     - cat /etc/os-release
-
+  timeout: 15 minutes
 
 test_16_04:
   <<: *test_definition
@@ -202,6 +202,7 @@ test_18_foam:
   dependencies:
     - make_18_04
   needs: ["make_18_04"]
+  timeout: 15 minutes
   script:
     - cat /etc/os-release
     - export OMPI_MCA_btl_vader_single_copy_mechanism=none
@@ -225,6 +226,7 @@ test_18_04_nogui:
 #    - export OMPI_MCA_mpi_yield_when_idle=1 #degraded mode when oversubscribing (https://www.open-mpi.org/faq/?category=running#oversubscribing)
   script:
     - install/bin/yade-ci --checks
+  timeout: 15 minutes
 
 check_16_04:
   <<: *check_definition
