OpenFOAM test uses relative paths, so that it will work in other places too.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -212,7 +212,8 @@ test_18_foam:
   script:
     - cat /etc/os-release
     - export OMPI_MCA_btl_vader_single_copy_mechanism=none
-    - /builds/yade-dev/trunk/scripts/checks-and-tests/testOpenFoam.sh
+    - pwd
+    - scripts/checks-and-tests/testOpenFoam.sh
 
 test_18_04_nogui:
   <<: *test_definition
